/*
 * Copyright 2017-present Open Networking Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
option java_package = "org.onosproject.grpc.net.flow.criteria.models";

package net.flow.criteria;

enum TypeProto {
    IN_PORT = 0;
    ETH_DST = 1;
    ETH_SRC = 2;
    ETH_TYPE = 3;
    IPV4_SRC = 4;
    IPV4_DST = 5;
    UDP_SRC = 6;
    UDP_DST = 7;
    TCP_SRC = 8;
    TCP_DST = 9;
    VLAN_VID = 10;
    ARP_OP = 11;
    ARP_SPA = 12;
    ARP_TPA = 13;
    ARP_SHA = 14;
    ARP_THA = 15;
    IP_PROTO = 16;
    ETH_DST_MASKED = 17;
    ETH_SRC_MASKED = 18;
    VLAN_PCP = 19;
    INNER_VLAN_VID = 20;
    INNER_VLAN_PCP = 21;
    IP_DSCP = 22;
    IP_ECN = 23;
    IN_PHY_PORT = 24;
    METADATA = 25;
    TCP_SRC_MASKED = 26;
    TCP_DST_MASKED = 27;
    UDP_SRC_MASKED = 28;
    UDP_DST_MASKED = 29;
    SCTP_SRC = 30;
    SCTP_SRC_MASKED = 31;
    SCTP_DST = 32;
    SCTP_DST_MASKED = 33;
    ICMPV4_TYPE = 34;
    ICMPV4_CODE = 35;
    IPV6_SRC = 36;
    IPV6_DST = 37;
    IPV6_FLABEL = 38;
    ICMPV6_TYPE = 39;
    ICMPV6_CODE = 40;
    IPV6_ND_TARGET = 41;
    IPV6_ND_SLL = 42;
    IPV6_ND_TLL = 43;
    MPLS_LABEL = 44;
    MPLS_TC = 45;
    MPLS_BOS = 46;
    PBB_ISID = 47;
    TUNNEL_ID = 48;
    IPV6_EXTHDR =49;
    UNASSIGNED_40 = 50;
    PBB_UCA = 51;
    TCP_FLAGS = 52;
    ACTSET_OUTPUT = 53;
    PACKET_TYPE = 54;
    OCH_SIGID = 55;
    OCH_SIGTYPE = 56;
    ODU_SIGID = 57;
    ODU_SIGTYPE = 58;
    PROTOCOL_INDEPENDENT = 59;
    EXTENSION = 60;
    DUMMY = 61;
}

// Corresponds to org.onosproject.net.flow.criteria.
message CriterionProto {
    TypeProto type = 1;
    oneof criterion {
        EthCriterionProto ethCriterion = 2;
        EthTypeCriterionProto ethTypeCriterion = 3;
        IPCriterionProto ipCriterion = 4;
        IPProtocolCriterionProto ipProtocolCriterion = 5;
        TcpPortCriterionProto tcpPortCriterion = 6;
        UdpPortCriterionProto udpPortCriterion = 7;
        IcmpCodeCriterionProto icmpCodeCriterion = 8;
        IcmpTypeCriterionProto icmpTypeCriterion = 9;
        Icmpv6CodeCriterionProto icmpv6CodeCriterion = 10;
        Icmpv6TypeCriterionProto icmpv6TypeCriterion = 11;
        SctpPortCriterionProto sctpPortCriterion = 12;
        ArpHaCriterionProto arpHaCriterion = 13;
        ArpOpCriterionProto arpOpCriterion = 14;
        ArpPaCriterionProto arpPaCriterion = 15;
        PortCriterionProto portCriterion = 16;
    }
}

// Corresponds to org.onosproject.net.flow.criteria.EthCriterion.
message EthCriterionProto {
    bytes macAddress = 1;
}

// Corresponds to org.onosproject.net.flow.criteria.EthTypeCriterion.
message EthTypeCriterionProto {
    int32 ethType = 1;
}

// Corresponds to org.onosproject.net.flow.criteria.IPCriterion
message IPCriterionProto {
    bytes IpPrefix = 1;
    int32 prefixLength = 2;
}

// Corresponds to org.onosproject.net.flow.criteria.IPProtocolCriterion
message IPProtocolCriterionProto {
    int32 protocol = 1;
}

// Corresponds to org.onosproject.net.flow.criteria.TcpPortCriterion
message TcpPortCriterionProto {
    int32 tcpPort = 1;
}

// Corresponds to org.onosproject.net.flow.criteria.UdpPortCriterion
message UdpPortCriterionProto {
    int32 udpPort = 1;
}

// Corresponds to org.onosproject.net.flow.criteria.IcmpCodeCriterion
message IcmpCodeCriterionProto {
    int32 icmpCode = 1;
}

// Corresponds to org.onosproject.net.flow.criteria.IcmpTypeCriterion
message IcmpTypeCriterionProto {
    int32 icmpType = 1;
}

// Corresponds to org.onosproject.net.flow.criteria.Icmpv6CodeCriterion
message Icmpv6CodeCriterionProto {
    int32 icmpv6Code = 1;
}

// Corresponds to org.onosproject.net.flow.criteria.Icmpv6TypeCriterion
message Icmpv6TypeCriterionProto {
    int32 icmpv6Type = 1;
}

// Corresponds to org.onosproject.net.flow.criteria.SctpPortCriterion
message SctpPortCriterionProto {
    int32 sctpPort = 1;
}

// Corresponds to org.onosproject.net.flow.criteria.ArpHaCriterion
message ArpHaCriterionProto {
    bytes mac = 1;
}

// Corresponds to org.onosproject.net.flow.criteria.ArpOpCriterion
message ArpOpCriterionProto {
    int32 arpOp = 1;
}

// Corresponds to org.onosproject.net.flow.criteria.ArpPaCriterion
message ArpPaCriterionProto {
    bytes ip4Address = 1;
}

// Corresponds to org.onosproject.net.flow.criteria.PortCriterion
message PortCriterionProto {
    int64 port = 1;
    string name = 2;
}

